[project]
name = "readabletrace"
version = "0.1.0"
description = "A high-performance EVM blockchain transaction trace parser that converts complex EVM trace data into human-readable format"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "ReadableTrace Team", email = "your-email@example.com"},
]
keywords = ["ethereum", "blockchain", "evm", "trace", "parser", "defi", "smart-contract"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "eth-abi>=5.0.0",
    "eth-utils>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ReadableTrace"
"Bug Reports" = "https://github.com/your-username/ReadableTrace/issues"
"Source" = "https://github.com/your-username/ReadableTrace"

[project.scripts]
readabletrace = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
